--- a/app/src/main/res/layout/activity_category1.xml
+++ b/app/src/main/res/layout/activity_category1.xml
@@ -1,41 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    android:gravity="center_vertical">
 
-    <Button
-        android:id="@+id/sportButton"
-        android:layout_width="wrap_content"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="스포츠" />
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="10dp">
 
-    <Button
-        android:id="@+id/cultureButton"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/sportButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="스포츠"
+            android:textSize="25dp"
+            android:layout_marginRight="20dp"/>
+
+        <Button
+            android:id="@+id/cultureButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="문화"
+            android:textSize="25dp"
+            android:layout_marginLeft="20dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="문화 생활"
-        app:layout_constraintLeft_toRightOf="@+id/sportButton"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
-    <Button
-        android:id="@+id/threeButton"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/threeButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="3"
+            android:textSize="25dp"
+            android:layout_marginRight="20dp"/>
+
+        <Button
+            android:id="@+id/fourButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="4"
+            android:textSize="25dp"
+            android:layout_marginLeft="20dp"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="3"
-        app:layout_constraintLeft_toRightOf="@+id/cultureButton"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="10dp">
 
-    <Button
-        android:id="@+id/fourButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4"
-        app:layout_constraintLeft_toRightOf="@+id/threeButton"/>
+        <Button
+            android:id="@+id/fiveButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="5"
+            android:textSize="25dp"
+            android:layout_marginRight="20dp"/>
 
-    <Button
-        android:id="@+id/fiveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        app:layout_constraintLeft_toRightOf="@+id/fourButton"/>
+        <Button
+            android:id="@+id/sixButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:text="6"
+            android:textSize="25dp"
+            android:layout_marginLeft="20dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
