--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,74 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <fragment
-        android:id="@+id/mapFragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+<layout>
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
-        tools:context=".MapActivity" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/currentLocationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_location"
-        app:layout_constraintEnd_toEndOf="@id/mapFragment"
-        app:layout_constraintBottom_toBottomOf="@id/mapFragment"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:visibility="visible"
-        />
-    <Button
-        android:id="@+id/findHobbyButton"
-        android:text="모임 찾기/ 모임 생성"
-        android:textSize="10dp"
-        android:layout_width="75dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        />
-    <Button
-        android:id="@+id/chooseLocationButton"
-        android:text="수동 위치"
-        android:textSize="10dp"
-        android:layout_width="75dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        app:layout_constraintLeft_toRightOf="@id/findHobbyButton"
-        app:layout_constraintRight_toLeftOf="@id/myHobbyListButton"/>
-    <Button
-        android:id="@+id/myHobbyListButton"
-        android:text="내 모임"
-        android:textSize="10dp"
-        android:layout_width="75dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        app:layout_constraintLeft_toRightOf="@id/chooseLocationButton"
-        app:layout_constraintRight_toLeftOf="@id/chatButton"/>
-    <Button
-        android:id="@+id/chatButton"
-        android:text="채팅방"
-        android:textSize="10dp"
-        android:layout_width="72dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        app:layout_constraintLeft_toRightOf="@id/myHobbyListButton"
-        app:layout_constraintRight_toLeftOf="@id/moveBackButton"/>
-    <Button
-        android:id="@+id/moveBackButton"
-        android:text="뒤로 가기"
-        android:textSize="10dp"
-        android:layout_width="72dp"
-        android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        app:layout_constraintLeft_toRightOf="@id/chatButton"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/view_toolbar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+
+            <include
+                android:id="@+id/view_toolbar"
+                layout="@layout/activity_main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
+            <fragment
+                android:id="@+id/mapFragment"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/view_toolbar"
+                app:layout_constraintBottom_toTopOf="@id/findCreateHobbyButton"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:context=".MapActivity" />
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/currentLocationButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_location"
+                app:layout_constraintEnd_toEndOf="@id/mapFragment"
+                app:layout_constraintBottom_toBottomOf="@id/mapFragment"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="32dp"
+                android:visibility="visible"
+                />
+            <Button
+                android:id="@+id/findCreateHobbyButton"
+                android:text="모임 찾기/ 모임 생성"
+                android:textSize="10dp"
+                android:layout_width="75dp"
+                android:layout_height="80dp"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/chooseLocationButton"
+                />
+            <Button
+                android:id="@+id/chooseLocationButton"
+                android:text="수동 위치"
+                android:textSize="10dp"
+                android:layout_width="75dp"
+                android:layout_height="80dp"
+                app:layout_constraintEnd_toStartOf="@+id/myHobbyListButton"
+                app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+                app:layout_constraintStart_toEndOf="@+id/findCreateHobbyButton"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/myHobbyListButton"
+                android:text="내 모임"
+                android:textSize="10dp"
+                android:layout_width="75dp"
+                android:layout_height="80dp"
+                app:layout_constraintEnd_toStartOf="@+id/chatButton"
+                app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+                app:layout_constraintStart_toEndOf="@+id/chooseLocationButton"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/chatButton"
+                android:text="채팅방"
+                android:textSize="10dp"
+                android:layout_width="72dp"
+                android:layout_height="80dp"
+                app:layout_constraintEnd_toStartOf="@+id/moveBackButton"
+                app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+                app:layout_constraintStart_toEndOf="@+id/myHobbyListButton"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/moveBackButton"
+                android:text="뒤로 가기"
+                android:textSize="10dp"
+                android:layout_width="72dp"
+                android:layout_height="80dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+                app:layout_constraintStart_toEndOf="@+id/chatButton"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!--자식 레이아웃. Navigation Drawer-->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            app:headerLayout="@layout/activity_main_drawer_header"
+            app:menu="@menu/main_drawer_navigation">
+        </com.google.android.material.navigation.NavigationView>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+</layout>
+
