--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,11 +5,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <include
+        android:id="@+id/search_toolbar"
+        layout="@layout/activity_search_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mapFragment"/>
+
     <fragment
         android:id="@+id/mapFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_toolbar"
+        app:layout_constraintBottom_toTopOf="@id/LocationCheckButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:context=".MapActivity" />
 
     <Button
@@ -18,16 +32,22 @@
         android:textSize="10dp"
         android:layout_width="150dp"
         android:layout_height="80dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapFragment"
+        app:layout_constraintEnd_toStartOf="@+id/LocationCancelButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
+
     <Button
         android:id="@+id/LocationCancelButton"
         android:text="취소"
         android:textSize="10dp"
         android:layout_width="150dp"
         android:layout_height="80dp"
+        app:layout_constraintStart_toEndOf="@+id/LocationCheckButton"
         app:layout_constraintTop_toBottomOf="@+id/mapFragment"
-        app:layout_constraintLeft_toRightOf="@id/LocationCheckButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
