--- a/app/src/main/res/layout/activity_made_group2.xml
+++ b/app/src/main/res/layout/activity_made_group2.xml
@@ -45,9 +45,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/cameraButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView66"
         app:srcCompat="@drawable/bejji" />
 
     <TextView
@@ -61,7 +63,7 @@
         android:text="소모임대표사진"
         android:textSize="30sp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
