--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="97dp"
         android:ems="10"
         android:hint="ID"
+        android:text="ourfriend@gmail.com"
         android:inputType="textPersonName"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginBottom="28dp"
         android:ems="10"
         android:hint="PASSWORD"
+        android:text="1q2w3e4r"
         android:visibility="gone"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/loginbutton"
