--- a/app/src/main/res/layout/activity_belong_small_group.xml
+++ b/app/src/main/res/layout/activity_belong_small_group.xml
@@ -1,34 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BelongSmallGroup">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="165dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="166dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/dao1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50sp" />
+        <ImageButton
 
-    <TextView
-        android:id="@+id/textView64"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="177dp"
-        android:text="다사모"
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/Groupimage"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            tools:srcCompat="@drawable/ourbaseconcept" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50sp" />
+
+        <TextView
+            android:id="@+id/NameByGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="날씨도 좋은데"
+            android:textSize="30sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageButton3"
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:scaleType="fitXY"
+                android:layout_weight="1"
+                tools:srcCompat="@drawable/mybbc1" />
+
+            <ImageView
+                android:id="@+id/imageButton4"
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:scaleType="fitXY"
+                android:layout_weight="1"
+                tools:srcCompat="@drawable/mybbc2" />
+
+            <ImageView
+                android:id="@+id/imageButton5"
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:scaleType="fitXY"
+                android:layout_weight="1"
+                tools:srcCompat="@drawable/mybbc3" />
+        </LinearLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50sp" />
+
+        <TextView
+            android:id="@+id/textView64"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="모임공지글" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50sp" />
+
+        <Button
+            android:id="@+id/chatbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="모임채팅방" />
+    </LinearLayout>
+</ScrollView>
