--- a/app/src/main/res/layout/recycler_chatbubble_right.xml
+++ b/app/src/main/res/layout/recycler_chatbubble_right.xml
@@ -3,11 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_weight="1"
+        android:text="13:48"
+        android:textAlignment="textEnd" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:orientation="vertical">
 
