--- a/app/src/main/res/layout/activity_main_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_drawer_header.xml
@@ -15,14 +15,16 @@
             android:src="@drawable/bejji"/>
 
         <TextView
+            android:id="@+id/header_user_nickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#000000"
-            android:text="회원이름"/>
+            android:text="회원닉네임"/>
 
         <TextView
+            android:id="@+id/header_user_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15dp"
