--- a/app/src/main/res/layout/activity_belong.xml
+++ b/app/src/main/res/layout/activity_belong.xml
@@ -9,9 +9,10 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager23"
         android:layout_width="409dp"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout23" />
