--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,8 +15,8 @@
         android:layout_marginEnd="97dp"
         android:ems="10"
         android:hint="ID"
-        android:text="ourfriend@gmail.com"
-        android:inputType="textPersonName"
+        android:text="asd1234@naver.com"
+        android:inputType="textEmailAddress"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,9 @@
         android:layout_marginBottom="28dp"
         android:ems="10"
         android:hint="PASSWORD"
-        android:text="1q2w3e4r"
+        android:text="asd1234"
         android:visibility="gone"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/loginbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
