--- a/app/src/main/res/layout/activity_belong_small_group.xml
+++ b/app/src/main/res/layout/activity_belong_small_group.xml
@@ -26,8 +26,8 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="100dp"
         android:text="TextView"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton" />
