--- a/app/src/main/res/layout/activity_belong_small_group.xml
+++ b/app/src/main/res/layout/activity_belong_small_group.xml
@@ -8,8 +8,9 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:background="@android:color/transparent"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
