가능한이야긴가

--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -49,6 +49,7 @@
         android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        app:tint="#FFBA01"
         app:srcCompat="@drawable/star" />
 
 </LinearLayout>
