--- a/app/src/main/res/layout/activity_user_my_page.xml
+++ b/app/src/main/res/layout/activity_user_my_page.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/applyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="83dp"
@@ -68,8 +68,10 @@
         android:text="apply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
+        app:layout_constraintVertical_bias="0.503" />
 
     <ImageButton
         android:id="@+id/imageButton7"
